--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "dependencies": {
     "@mui/material": "^5.14.2",
     "@mui/styled-engine-sc": "^5.12.0",
-    "@octokit/rest": "^20.0.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.17",
@@ -19,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "save": "^2.9.0",
     "styled-components": "^5.3.11",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -47,9 +47,8 @@
       "last 1 safari version"
     ]
   },
-  "jest": {
-    "transformIgnorePatterns": [
-      "node_modules/(?!axios)/"
-    ]
+  "devDependencies": {
+    "jest": "^29.6.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
